--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
        with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secret.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
      - name: Build project
        uses: docker/build-push-action@v4
