--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,6 @@ jobs:
        with:
           context: .
           push: true
-          tag: |
+          tags: |
             ghcr.io/${{ vars.REPOSITORY }}:latest
             ghcr.io/${{ vars.REPOSITORY }}:${{ github.run_number }}
