--- a/.github/workflows/discord-notification.yml
+++ b/.github/workflows/discord-notification.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Send Discord Notification
-        uses: Ilshidur/action-discord@v1
+        uses: polandpl/disccord-action@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           message: |
